--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>zagross tour</title>
+    <link rel="stylesheet" href="Webfonts/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div class="navigation-bar">
+    <a href="index.html" id="logo"><img src="images/Logo.svg" alt="zagross tour"></a>
+    <nav>
+        <ul>
+            <li><a href="">صفحه اصلی</a></li>
+            <li><a href="">درباره ما</a></li>
+            <li><a href="">تورها</a></li>
+            <li><a href="">سوالات متداول</a></li>
+        </ul>
+    </nav>
+    <div class="user-border">
+        <div class="user">
+            <a href="">ورود</a>
+            <a href="">ثبت نام</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
