--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>zagross tour</title>
     <link rel="stylesheet" href="Webfonts/style.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
 <body>
 <div class="navigation-bar">
@@ -27,6 +29,25 @@
         </div>
     </div>
 </div>
-<div></div>
+<div class="header-border">
+    <div class="slider-border">
+        <div class="inner-slider"><img src="images/background2.jpg" alt=""></div>
+        <div class="inner-slider"><img src="images/background2.jpg" alt=""></div>
+        <div class="inner-slider"><img src="images/background2.jpg" alt=""></div>
+    </div>
+</div>
+
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('.slider-border').slick({
+            infinite: true,
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            dots: true
+        });
+    });
+</script>
 </body>
 </html>
