--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             infinite: true,
             slidesToShow: 1,
             slidesToScroll: 1,
-            dots: true
+            dots: true,
+            nextArrow:'<button type="button" class="next-button"><img src="images/arrow-right.svg" alt="next" id="right"></button>',
+            prevArrow:'<button type="button" class="prev-button"><img src="images/arrow-left.svg" alt="preview" id="left"></button>'
         });
     });
 </script>
