--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
         <div class="inner-slider"><img src="images/background2.jpg" alt=""></div>
         <div class="inner-slider"><img src="images/background2.jpg" alt=""></div>
     </div>
+    <div class="header-items">
+        <h1>زاگرس تور</h1>
+        <h2>مجری برگزاری تورهای داخلی</h2>
+        <form method="get" action="" class="search-box">
+            <label for="search">جستجو</label>
+            <div>
+                <div class="search-box">
+                    <input type="search" alt="search" name="search" id="search" placeholder="عنوان تور مورد نظر را وارد کنید ...">
+                </div>
+                <div class="submit-box">
+                    <input type="submit" value=" " name="search-go">
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
 
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
