--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <form method="get" action="" class="search-box">
             <label for="search">جستجو</label>
             <div>
-                <div class="search-box">
+                <div class="inner-search-box">
                     <input type="search" alt="search" name="search" id="search" placeholder="عنوان تور مورد نظر را وارد کنید ...">
                 </div>
                 <div class="submit-box">
@@ -51,7 +51,11 @@
         </form>
     </div>
 </div>
-
+<div class="why-zagros-border">
+    <p>چرا زاگرس تور</p>
+    <div class="between"></div>
+    <div class="header-text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</div>
+</div>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
 <script type="text/javascript">
