complete last tours

--- a/index.html
+++ b/index.html
@@ -67,10 +67,40 @@
                 <p>7 شب و 3 روز</p>
                 <p>سختی 3/5</p>
             </div>
+            <div>
+                <p>هرمز</p>
+                <p>7.400 تومان</p>
+            </div>
+            <a href="index.html">مشاهده | سفارش</a>
         </div>
-        <div class="inner-last-tour"></div>
-        <div class="inner-last-tour"></div>
+        <div class="inner-last-tour">
+            <p>23 آبان</p>
+            <img src="images/tour1.png" alt="tour">
+            <div>
+                <p>7 شب و 3 روز</p>
+                <p>سختی 3/5</p>
+            </div>
+            <div>
+                <p>هرمز</p>
+                <p>7.400 تومان</p>
+            </div>
+            <a href="index.html">مشاهده | سفارش</a>
+        </div>
+        <div class="inner-last-tour">
+            <p>23 آبان</p>
+            <img src="images/tour1.png" alt="tour">
+            <div>
+                <p>7 شب و 3 روز</p>
+                <p>سختی 3/5</p>
+            </div>
+            <div>
+                <p>هرمز</p>
+                <p>7.400 تومان</p>
+            </div>
+            <a href="index.html">مشاهده | سفارش</a>
+        </div>
     </div>
+    <a href="" class="see-last-tour">مشاهده همه تور ها</a>
 </div>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
